[package]
name = "properties"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = { path = "../generator" }
blockchain-driver = { path = "../blockchain" }
utils = { path = "../utils" }

[lib]
crate-type = ["lib"]
name = "properties"
