[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.32"
solana-client = "1.10.32"
solana-program = "1.10.32"
solana-transaction-status = "1.10.32"
chrono = "0.4.0"
rand = "0.8.5"